# FateML

./: .gitignore  README.md  requirements.txt  setup.cfg
fateml/data/: __init__.py  bike_rental.py  cervical_cancer.py  diabetes.py  fishmarket.py  iris.py  utils.py
fateml/utils/: statsmodels.py
notebooks/: 01_intro.ipynb  02_classical_models.ipynb  03_decision_models.ipynb  04_model_agnostic_methods.ipynb  05_model_agnostic_global_exp.ipynb  07_adversarial-examples.ipynb  08_transformers.ipynb
