[metadata]
name = fateml
version = 0.0.8
author = Tamás Ficsor
author_email = ficsort@inf.u-szeged.hu
description = Utilities for the notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ficstamas/FateML
project_urls =
    Bug Tracker = https://github.com/ficstamas/FateML/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    scikit-learn
    lxml
    cvxopt
